--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -13,7 +13,6 @@
   width: 92%;
   max-width: 1180px;
 }
-
 @media screen and (min-width: 768px) {
   .jobs-content {
     display: flex;
@@ -23,7 +22,6 @@
     width: 92%;
   }
 }
-
 .loader-container {
   display: flex;
   justify-content: center;
@@ -31,13 +29,11 @@
   height: 70vh;
   flex-grow: 1;
 }
-
 @media screen and (min-width: 768px) {
   .loader-container {
     width: 100%;
   }
 }
-
 .jobs-error-view-container {
   display: flex;
   flex-direction: column;
@@ -47,7 +43,6 @@
   padding-bottom: 64px;
   flex-grow: 1;
 }
-
 @media screen and (min-width: 768px) {
   .jobs-error-view-container {
     width: 70%;
@@ -56,34 +51,29 @@
     padding-bottom: 0px;
   }
 }
-
 .jobs-failure-img {
   width: 250px;
   height: 200px;
 }
-
 @media screen and (min-width: 768px) {
   .jobs-failure-img {
     width: 400px;
     height: 350px;
   }
 }
-
 .jobs-failure-heading-text {
   color: #ffffff;
-  font-size: 24px;
   font-family: 'Roboto';
+  font-size: 24px;
   font-weight: 500;
   line-height: 1.3;
   text-align: center;
 }
-
 @media screen and (min-width: 768px) {
   .jobs-failure-heading-text {
     font-size: 30px;
   }
 }
-
 .jobs-failure-description {
   text-align: center;
   color: #ffffff;
@@ -93,13 +83,11 @@
   max-width: 388px;
   margin-top: 0px;
 }
-
 @media screen and (min-width: 768px) {
   .jobs-failure-description {
     font-size: 16px;
   }
 }
-
 .jobs-failure-button {
   padding: 8px 32px;
   border-radius: 5px;
@@ -112,7 +100,6 @@
   font-weight: 500;
   font-family: 'Roboto';
 }
-
 .no-jobs-view {
   display: flex;
   flex-direction: column;
@@ -184,11 +171,9 @@
     width: 100%;
   }
 }
-
 .jobs-list {
   padding-left: 0;
 }
-
 .search-input-jobs-list-container {
   display: flex;
   flex-direction: column;
@@ -205,7 +190,6 @@
     margin-top: 28px;
   }
 }
-
 .search-input-container-desktop {
   display: flex;
   align-self: flex-start;
@@ -225,10 +209,12 @@
   border: none;
   outline: none;
   flex-grow: 1;
-  padding: 6px 16px 6px 16px;
+  padding-left: 16px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 16px;
   width: 450px;
 }
-
 .search-button-container-desktop {
   background-color: #475569;
   border: none;
@@ -245,8 +231,7 @@
   width: 15px;
   height: 15px;
 }
-
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .search-input-container-desktop {
     display: none;
   }
