--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -1,69 +1,101 @@
 .login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #000000;
   height: 100vh;
-  padding-top: 30px;
+}
+.form-container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  padding: 60px 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 450px;
+  background-color: #202020;
 }
 
-.login-form-container {
-  background-color: #272727;
-  border-radius: 10px;
-  padding: 40px;
-  width: 40%;
+@media screen and (min-width: 992px) {
+  .form-container {
+    width: 450px;
+    flex-shrink: 0;
+    padding: 64px 48px 64px 48px;
+  }
 }
-
-.form-logo-container {
+.login-website-logo {
+  width: 90px;
+  padding-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .login-website-logo {
+    width: 180px;
+  }
+}
+.input-container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 20px;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 100%;
 }
 
-.form-label {
-  color: #ffffff;
+.input-label {
+  margin-bottom: 0px;
+  font-family: 'Roboto';
   font-weight: 500;
-  font-size: 20px;
-  font-family: 'Roboto';
+  font-size: 13px;
+  line-height: 16px;
+  color: #ffffff;
 }
 
-.form-input {
-  border-radius: 5px;
-  border: 1px solid #7e858e;
-  color: #ffffff;
-  width: 100%;
-  height: 40px;
-  background-color: transparent;
-  margin-top: 5px;
+.username-input-field {
   font-size: 15px;
+  height: 40px;
+  border: 1px solid #6366f1;
+  background-color: transparent;
+  color: #ffffff;
+  border-radius: 2px;
+  margin-top: 5px;
+  padding: 8px 16px 8px 16px;
+  outline: none;
 }
 
-.form-submit-button {
-  color: #ffffff;
-  background-color: #6366f1;
-  border: 0;
-  border-radius: 5px;
-  width: 100%;
-  font-weight: bold;
-  font-size: 20px;
-  font-family: 'Roboto';
-  padding: 5px;
+.password-input-field {
+  font-size: 14px;
   height: 40px;
+  border: 1px solid #6366f1;
+  background-color: transparent;
+  color: #ffffff;
+  border-radius: 2px;
+  margin-top: 5px;
+  padding: 8px 16px 8px 16px;
+  outline: none;
+}
+
+.login-button {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 16px;
+  color: #ffffff;
+  height: 40px;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 2px;
+  background-color: #4f46e5;
+  border-radius: 8px;
+  border: none;
+  outline: none;
   cursor: pointer;
 }
 
-@media screen and (max-width: 767px) {
-  .login-container {
-    padding: 15px;
-  }
-  .login-form-container {
-    width: 100%;
-  }
-}
-
-.err {
-  color: #ff0b37;
+.error-message {
+  align-self: start;
+  font-size: 12px;
+  margin-top: 3px;
+  margin-bottom: 0px;
   font-family: 'Roboto';
+  font-size: 12px;
+  line-height: 16px;
+  color: #ff0b37;
 }
